Renamed Solution Folder and Added SDK Path Selector

--- a/HammerPP_Manager/App.config
+++ b/HammerPP_Manager/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HammerPP_Manager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="GarrysMod_HammerPlusPlus_Installer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,14 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <userSettings>
+        <HammerPP_Manager.Properties.Settings>
+            <setting name="FirstStartup" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SdkPath" serializeAs="String">
+                <value />
+            </setting>
+        </HammerPP_Manager.Properties.Settings>
         <GarrysMod_HammerPlusPlus_Installer.Properties.Settings>
             <setting name="FirstStartup" serializeAs="String">
                 <value>True</value>
