--- a/HammerPP_Manager/HammerPP_Manager.csproj
+++ b/HammerPP_Manager/HammerPP_Manager.csproj
@@ -225,6 +225,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelpfulTools.cs" />
+    <Compile Include="MainWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="StartupEnterDetails.cs">
       <SubType>Form</SubType>
     </Compile>
