--- a/HammerPP_Manager/Properties/Settings.settings
+++ b/HammerPP_Manager/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="GarrysMod_HammerPlusPlus_Installer.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HammerPP_Manager.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="FirstStartup" Type="System.Boolean" Scope="User">
