Started work on downloader

--- a/HammerPP_Manager/Properties/Settings.settings
+++ b/HammerPP_Manager/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="SdkPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="InstalledTag" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
