--- a/HammerPP_Manager/App.config
+++ b/HammerPP_Manager/App.config
@@ -17,6 +17,9 @@
             <setting name="SdkPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="InstalledTag" serializeAs="String">
+                <value />
+            </setting>
         </HammerPP_Manager.Properties.Settings>
         <GarrysMod_HammerPlusPlus_Installer.Properties.Settings>
             <setting name="FirstStartup" serializeAs="String">
