--- a/HammerPP_Manager/HammerPP_Manager.csproj
+++ b/HammerPP_Manager/HammerPP_Manager.csproj
@@ -225,6 +225,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DownloadWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DownloadWindow.Designer.cs">
+      <DependentUpon>DownloadWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelpfulTools.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
@@ -240,6 +246,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DownloadWindow.resx">
+      <DependentUpon>DownloadWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
