Testing way of storing template game info, might be terrible!

--- a/HammerPP_Manager/HammerPP_Manager.csproj
+++ b/HammerPP_Manager/HammerPP_Manager.csproj
@@ -238,6 +238,7 @@
     <Compile Include="MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="SourceGameInfomation.cs" />
     <Compile Include="StartupEnterDetails.cs">
       <SubType>Form</SubType>
     </Compile>
