Testing ui layout

--- a/HammerPP_Manager/HammerPP_Manager.csproj
+++ b/HammerPP_Manager/HammerPP_Manager.csproj
@@ -286,6 +286,7 @@
     <None Include="cross.png" />
     <None Include="Assets\denied.wav" />
     <None Include="Assets\granted.wav" />
+    <None Include="add.png" />
     <Content Include="hppicon.ico" />
   </ItemGroup>
   <ItemGroup>
