Revert "Renamed Solution Folder and Added SDK Path Selector"
This reverts commit 5fc9544e9fb70a9f09884201191ecba9d1ecff55.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /.vs/*
 /packages
 /packages/*
-/HammerPP_Manager/bin
-/HammerPP_Manager/bin/*
-/HammerPP_Manager/obj
-/HammerPP_Manager/obj/*
+/GarrysMod-HammerPlusPlus-Installer/bin
+/GarrysMod-HammerPlusPlus-Installer/bin/*
+/GarrysMod-HammerPlusPlus-Installer/obj
+/GarrysMod-HammerPlusPlus-Installer/obj/*
